--- a/front/site/quiz/grega.html
+++ b/front/site/quiz/grega.html
@@ -356,23 +356,33 @@ if (isset($_POST['submit'])) {
             <section id="secao-pergunta-8">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 8:</h1>
-                    <p class="pergunta">Explique a história de Ícaro na mitologia grega e como ela se relaciona com Dédalo.</p>
+                    <p class="pergunta">Além de ser o deus do submundo, Hades também era frequentemente 
+                    associado a qual outro elemento na mitologia grega?</p>
                     <p class="dificuldade">Nível Difícil</p>
                 </div>
                 <div class="alternativas">
                     <div class="radio-container">
+                        <input type="radio" name="questao8" class="tamanhoInputOriginal" id="" value="errado">
+                        <label>A - Mineração e riquezas provenientes das profundezas da terra, já que o submundo 
+                        era considerado a fonte desses recursos valiosos.</label>
+                    </div>
+
+                    <div class="radio-container">
                         <input type="radio" name="questao8" class="tamanhoInputOriginal" id="" value="certo">
-                        <label>As Moiras são deusas do destino, que tecem, medem e cortam o fio da vida de cada mortal, determinando seu destino.</label>
+                        <label>B - Os metais preciosos, particularmente o ouro e a prata, eram vistos como 
+                            tesouros escondidos nas entranhas da terra, sob a supervisão de Hades.</label>
                     </div>
 
                     <div class="radio-container">
                         <input type="radio" name="questao8" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>As Moiras são guerreiras que protegem os mortais em batalhas.</label>
+                        <label>C - A invisibilidade era uma característica associada a Hades, permitindo-lhe mover-se 
+                        sem ser visto, um traço muitas vezes ligado ao seu papel como deus do submundo.</label>
                     </div>
 
                     <div class="radio-container">
                         <input type="radio" name="questao8" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>As Moiras são deusas do amor e da beleza na mitologia grega.</label>
+                        <label>D - As tempestades não estão diretamente associadas a Hades na mitologia grega. 
+                        Portanto, esta alternativa não é correta.</label>
                     </div>
 
                     <div class="buttonResponder">
@@ -384,23 +394,34 @@ if (isset($_POST['submit'])) {
             <section id="secao-pergunta-9">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 9:</h1>
-                    <p class="pergunta">Explique o mito de Édipo na mitologia grega e como ele lida com seu destino trágico.</p>
+                    <p class="pergunta">Qual das seguintes afirmações sobre as Ninfas na mitologia grega é 
+                    verdadeira?</p>
                     <p class="dificuldade">Nível Difícil</p>
                 </div>
                 <div class="alternativas">
                     <div class="radio-container">
                         <input type="radio" name="questao9" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>Édipo não é uma figura mitológica grega.</label>
-                    </div>
-
-                    <div class="radio-container">
-                        <input type="radio" name="questao9" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>Édipo é um herói que derrota monstros em várias jornadas.</label>
+                        <label>A - Náiades eram ninfas associadas com fontes de água doce, como rios, lagos e 
+                        nascentes. Eram consideradas as protectoras das fontes e muitas vezes eram retratadas dançando à beira da água.</label>
                     </div>
 
                     <div class="radio-container">
                         <input type="radio" name="questao9" class="tamanhoInputOriginal" id="" value="certo">
-                        <label>Édipo é um homem que, sem saber, mata seu pai e se casa com sua mãe, cumprindo uma terrível profecia. Quando descobre a verdade, ele se cega e se exila.</label>
+                        <label>B - Náiades eram ninfas associadas com fontes de água doce, como rios, lagos e 
+                        nascentes. Eram consideradas as protectoras das fontes e muitas vezes eram retratadas dançando à beira da água.</label>
+                    </div>
+
+                    <div class="radio-container">
+                        <input type="radio" name="questao9" class="tamanhoInputOriginal" id="" value="errado">
+                        <label>C - Dríades eram ninfas que habitavam as árvores e florestas. Eram protetoras das 
+                        árvores e da vida selvagem, sendo essenciais para a manutenção do equilíbrio 
+                        natural.</label>
+                    </div>
+
+                    <div class="radio-container">
+                        <input type="radio" name="questao9" class="tamanhoInputOriginal" id="" value="errado">
+                        <label>D - Lâmpades eram ninfas subterrâneas, associadas às grutas e cavernas. Eram 
+                        frequentemente vistas como guardiãs de segredos e conhecimentos ocultos.</label>
                     </div>
 
                     <div class="buttonResponder">
@@ -412,7 +433,7 @@ if (isset($_POST['submit'])) {
             <section id="secao-pergunta-10">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 10:</h1>
-                    <p class="pergunta">Quem são os Argonautas e qual é a missão lendária que realizaram na mitologia grega?</p>
+                    <p class="pergunta">Como é retratado o mito de Édipo em tragédias gregas como a de Sófocles?</p>
                     <p class="dificuldade">Nível Difícil</p>
                 </div>
                 <div class="alternativas">
