Feature: adicionado perguntas quiz geral e japones

--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -288,6 +288,7 @@
         </ul>
         <p>Em resumo, a mitologia egípcia desempenhou um papel central na civilização egípcia antiga e continua a ser uma parte importante da cultura e do patrimônio egípcios. Sua influência é evidente em muitos aspectos da sociedade egípcia e ainda é estudada e apreciada em todo o mundo.</p>
         <h3>Após ter estudado a mitologia egípcia, gostaria de iniciar o quiz?</h3>
+        <p>Mas em resumo, a mitologia egípcia desempenhou um papel central na civilização egípcia antiga e continua a ser uma parte importante da cultura e do patrimônio egípcios. Sua influência é evidente em muitos aspectos da sociedade egípcia e ainda é estudada e apreciada em todo o mundo.</p>
         <div class="botao">
           <a href="../quiz/egipcia.html"
             ><input type="button" value="COMEÇAR" id="btnComecar"
