--- a/front/site/quiz/egipcia.html
+++ b/front/site/quiz/egipcia.html
@@ -17,7 +17,7 @@
                     <a href="#">QUIZ <span id="seta-baixo">&darr;</span></a>
                     <ul class="dropdown">
                         <li class="link-dropdown" id="linkGrecia"><a href="grega.php">Grécia</a></li>
-                        <li class="link-dropdown" id="linkGrecoRomana"><a href="greco-romana.html">Greco-Romana</a></li>
+                        <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
                         <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
                         <li id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
                         <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
