hotfix: Alteração nos links das páginas

--- a/front/site/paginas/footer/contato.html
+++ b/front/site/paginas/footer/contato.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contato | SEPE</title>
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../footer/footer.css">
+  <link rel="stylesheet" href="footer.css">
 
 </head>
 
@@ -112,7 +112,7 @@
 
 
       <div class="card">
-        <img src="http://127.0.0.1:5500/front/site/paginas/imagens/luizF.jpeg" alt="Foto de Luiz Fernando"
+        <img src="../imagens/luizF.jpeg" alt="Foto de Luiz Fernando"
           class="profile-image">
         <h2 class="name">Luiz Fernando Blume Jacinto</h2>
         <p>luiz.fernando.251107@gmail.com</p>
@@ -148,7 +148,7 @@
   </main>
   <div class="botao">
     <a href="sobre.html"><input type="button" value="SOBRE NÓS" id="btnComecar" /></a>
-    <a href="politica-priv.html"><input type="button" value="POL. DE PRIVACIDADE" id="btnComecar" /></a>
+    <a href="politica-priv.html"><input type="button" value="PRIVACIDADE" id="btnComecar" /></a>
 </div>
   <footer>
     <div class="footer-container">
