--- a/front/site/paginas/footer/sobre.html
+++ b/front/site/paginas/footer/sobre.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="politica-priv.css">
+    <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -71,7 +71,7 @@
                     <p>
                     <div class="botao">
                         <a href="contato.html"><input type="button" value="CONTATO" id="btnComecar" /></a>
-                        <a href="politica-priv.html"><input type="button" value="POL. DE PRIVACIDADE" id="btnComecar" /></a>
+                        <a href="politica-priv.html"><input type="button" value="PRIVACIDADE" id="btnComecar" /></a>
                     </div>
                     </p>
                 </section>
