--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -208,8 +208,8 @@
       <img src="../../../back/imagens/LYJEK(1).png" alt="">
       <div>
         <a href="footer/politica-priv.html">Política de privacidade</a>
-        <a href="../paginas/footer/contato.html">Contato</a>
-        <a href="#">Sobre</a>
+        <a href="footer/contato.html">Contato</a>
+        <a href="footer/sobre.html">Sobre</a>
       </div>
       <img src="../../../back/imagens/ifmg-vertical-branca(1).png" alt="">
 
