--- a/front/site/paginas/romana.html
+++ b/front/site/paginas/romana.html
@@ -159,7 +159,7 @@
         <div>
           <a href="footer/politica-priv.html">Política de privacidade</a>
           <a href="../paginas/footer/contato.html">Contato</a>
-          <a href="#">Sobre</a>
+          <a href="footer/sobre.html">Sobre</a>
         </div>
         <img src="../../../back/imagens/ifmg-vertical-branca(1).png" alt="">
 
