--- a/front/site/quiz/mesopotamica.html
+++ b/front/site/quiz/mesopotamica.html
@@ -17,10 +17,10 @@
                     <a href="#">QUIZ <span id="seta-baixo">&darr;</span></a>
                     <ul class="dropdown">
                         <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
-                        <li class="link-dropdown" id="linkGrecia"><a href="grega.html">Grécia</a></li>
-                        <li class="link-dropdown" id="linkGrecoRomana"><a href="greco-romana.html">Greco-Romana</a></li>
+                        <li class="link-dropdown" id="linkGrecia"><a href="grega.php">Grécia</a></li>
                         <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
                         <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
+                        <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
                         <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
                         <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
                         <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
