index (finalmente) pronto

--- a/front/site/paginas/index.html
+++ b/front/site/paginas/index.html
@@ -35,7 +35,7 @@
       <div class="conteudo">
         <div class="caixa egipcia">
           <div class="conteudocx">
-            <img src="imagens/icons/Ankh.png" alt="" width="200px">
+            <img src="imagens/icons/a3c8d320af0892d9de11c70f30f2fb8a-olho-budista-do-icone-de-horus.png" alt="" width="200px">
             <h2>Mitologia egípcia</h2>
             <p>A mitologia egípcia é uma antiga tradição de crenças e histórias do Egito Antigo, envolvendo deuses, rituais e uma forte influência na cultura egípcia, com ênfase na vida após a morte.</p>
             <button class="alternar-aba" data-target="egipcia">Ver Mais</button>
