organização de links

--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -33,7 +33,7 @@
                     <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
                 </ul>
             </li>
-            <li id="link-quiz"><a href="../quiz/egipcia.html">QUIZ EGÍPCIA</a></li>
+            <li id="link-quiz"><a href="../quiz/egipcia.php">QUIZ EGÍPCIA</a></li>
         </ul>
     </nav>
     </header>
