--- a/front/site/paginas/mesopotamica.html
+++ b/front/site/paginas/mesopotamica.html
@@ -33,7 +33,7 @@
                     <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
                 </ul>
             </li>
-            <li id="link-quiz"><a href="../quiz/mesopotamica.html">QUIZ MESOPOTÂMICA</a></li>
+            <li id="link-quiz"><a href="../quiz/mesopotamica.php">QUIZ MESOPOTÂMICA</a></li>
         </ul>
     </nav>
     </header>
