--- a/front/site/paginas/nordica.html
+++ b/front/site/paginas/nordica.html
@@ -27,10 +27,10 @@
             <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
             <li class="link-dropdown" id="linkHindu"><a href="hindu.html">Hindu</a></li>
             <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
-            <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
+            <li class="link-dropdown" id="linkNordica"><a href="romana.html">Romana</a></li>
           </ul>
         </li>
-        <li id="link-quiz"><a href="../quiz/nordica.html">QUIZ NORDICA</a></li>
+        <li id="link-quiz"><a href="../quiz/nordica.php">QUIZ NORDICA</a></li>
       </ul>
     </nav>
   </header>
