--- a/front/site/paginas/romana.html
+++ b/front/site/paginas/romana.html
@@ -35,7 +35,7 @@
                     <li class="link-dropdown" id="linkGrecia"><a href="grega.html">Grega</a></li>
                 </ul>
             </li>
-            <li id="link-quiz"><a href="../quiz/romana.html">QUIZ ROMANA</a></li>
+            <li id="link-quiz"><a href="../quiz/romana.php">QUIZ ROMANA</a></li>
         </ul>
     </nav>
     </header>
