--- a/front/site/paginas/hindu.html
+++ b/front/site/paginas/hindu.html
@@ -33,7 +33,7 @@
             <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
           </ul>
         </li>
-        <li id="link-quiz"><a href="../quiz/hindu.html">QUIZ HINDU</a></li>
+        <li id="link-quiz"><a href="../quiz/hindu.php">QUIZ HINDU</a></li>
 
       </nav>
   </header>
