--- a/front/site/paginas/japonesa.html
+++ b/front/site/paginas/japonesa.html
@@ -30,7 +30,7 @@
                 <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
             </ul>
         </li>
-        <li id="link-quiz"><a href="../quiz/japonesa.html">QUIZ JAPONESA</a></li>
+        <li id="link-quiz"><a href="../quiz/japonesa.php">QUIZ JAPONESA</a></li>
     </ul>
 </nav>
 </header>
