--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -33,6 +33,7 @@
                     <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
                 </ul>
             </li>
+            <li id="link-sair"><a href="../../../back/logout.php">SAIR</a></li>
             <li id="link-quiz"><a href="../quiz/egipcia.php">QUIZ EGÍPCIA</a></li>
         </ul>
     </nav>
@@ -290,7 +291,7 @@
         <h3>Após ter estudado a mitologia egípcia, gostaria de iniciar o quiz?</h3>
         <p>Mas em resumo, a mitologia egípcia desempenhou um papel central na civilização egípcia antiga e continua a ser uma parte importante da cultura e do patrimônio egípcios. Sua influência é evidente em muitos aspectos da sociedade egípcia e ainda é estudada e apreciada em todo o mundo.</p>
         <div class="botao">
-          <a href="../quiz/egipcia.html"
+          <a href="../quiz/egipcia.php"
             ><input type="button" value="COMEÇAR" id="btnComecar"
           /></a>
         </div>
