--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -30,6 +30,7 @@
                       <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
                   </ul>
               </li>
+              <li id="link-sair"><a href="../../../back/logout.php">SAIR</a></li>
               <li id="link-quiz"><a href="../quiz/grega.php">QUIZ GREGA</a></li>
           </ul>
       </nav>
