--- a/front/site/paginas/hindu.html
+++ b/front/site/paginas/hindu.html
@@ -33,6 +33,7 @@
             <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
           </ul>
         </li>
+        <li id="link-sair"><a href="../../../back/logout.php">SAIR</a></li>
         <li id="link-quiz"><a href="../quiz/hindu.php">QUIZ HINDU</a></li>
 
       </nav>
@@ -301,7 +302,7 @@
       </ul>
       <h3>Após ter estudado a mitologia grega, gostaria de iniciar o quiz?</h3>
       <div class="botao">
-        <a href="../quiz/hindu.html"><input type="button" value="COMEÇAR" id="btnComecar"></a>
+        <a href="../quiz/hindu.php"><input type="button" value="COMEÇAR" id="btnComecar"></a>
       </div>
     </div>
     <div class="col" style="background-image: url(../paginas/imagens/asideHindu.png);
