--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -30,6 +30,7 @@
                 <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
             </ul>
         </li>
+        <li id="link-sair"><a href="../../../back/logout.php">SAIR</a></li>
         <li id="link-quiz"><a href="../quiz/irlandesa.php">QUIZ IRLANDESA</a></li>
     </ul>
     </nav>
@@ -253,7 +254,7 @@
 
         <h3>Após ter estudado a mitologia irlandesa, gostaria de iniciar o quiz?</h3>
       <div class="botao">
-        <a href="../quiz/irlandesa.html"><input type="button" value="COMEÇAR" id="btnComecar" /></a>
+        <a href="../quiz/irlandesa.php"><input type="button" value="COMEÇAR" id="btnComecar" /></a>
       </div>
     </div>
     <div class="col" style="background-image: url(../paginas/imagens/asideIrlan.png);
