--- a/front/site/paginas/japonesa.html
+++ b/front/site/paginas/japonesa.html
@@ -30,6 +30,7 @@
                 <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
             </ul>
         </li>
+        <li id="link-sair"><a href="../../../back/logout.php">SAIR</a></li>
         <li id="link-quiz"><a href="../quiz/japonesa.php">QUIZ JAPONESA</a></li>
     </ul>
 </nav>
@@ -234,7 +235,7 @@
       </ul>
       <h3>Após ter estudado a mitologia japonesa, gostaria de iniciar o quiz?</h3>
       <div class="botao">
-        <a href="../quiz/japonesa.html"><input type="button" value="COMEÇAR" id="btnComecar" /></a>
+        <a href="../quiz/japonesa.php"><input type="button" value="COMEÇAR" id="btnComecar" /></a>
       </div>
     </div>
     <div class="col" style="background-image: url(../paginas/imagens/asideJapa.png);
