--- a/front/site/paginas/mesopotamica.html
+++ b/front/site/paginas/mesopotamica.html
@@ -33,6 +33,7 @@
                     <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
                 </ul>
             </li>
+            <li id="link-sair"><a href="../../../back/logout.php">SAIR</a></li>
             <li id="link-quiz"><a href="../quiz/mesopotamica.php">QUIZ MESOPOTÂMICA</a></li>
         </ul>
     </nav>
@@ -94,7 +95,7 @@
             </ul>
            <h3>Após ter estudado a mitologia grega, gostaria de iniciar o quiz?</h3> 
             <div class="botao">
-              <a href="../quiz/mesopotamica.html"
+              <a href="../quiz/mesopotamica.php"
                 ><input type="button" value="COMEÇAR" id="btnComecar"
               /></a>
             </div>
