--- a/front/site/paginas/nordica.html
+++ b/front/site/paginas/nordica.html
@@ -30,6 +30,7 @@
             <li class="link-dropdown" id="linkNordica"><a href="romana.html">Romana</a></li>
           </ul>
         </li>
+        <li id="link-sair"><a href="../../../back/logout.php">SAIR</a></li>
         <li id="link-quiz"><a href="../quiz/nordica.php">QUIZ NORDICA</a></li>
       </ul>
     </nav>
@@ -395,7 +396,7 @@
         Após ter estudado a mitologia nórdica, gostaria de iniciar o quiz?
       </h3>
       <div class="botao">
-        <a href="../quiz/nordica.html"><input type="button" value="COMEÇAR" id="btnComecar" /></a>
+        <a href="../quiz/nordica.php"><input type="button" value="COMEÇAR" id="btnComecar" /></a>
       </div>
     </div>
     <div class="col" style="background-image: url(../paginas/imagens/asideNordi.png);
