--- a/front/site/paginas/romana.html
+++ b/front/site/paginas/romana.html
@@ -35,6 +35,7 @@
                     <li class="link-dropdown" id="linkGrecia"><a href="grega.html">Grega</a></li>
                 </ul>
             </li>
+            <li id="link-sair"><a href="../../../back/logout.php">SAIR</a></li>
             <li id="link-quiz"><a href="../quiz/romana.php">QUIZ ROMANA</a></li>
         </ul>
     </nav>
@@ -122,7 +123,7 @@
         <p>É importante notar que, embora os romanos tenham adotado muitos elementos da mitologia grega, eles também desenvolveram sua própria tradição mitológica única ao longo do tempo. A mitologia romana tinha suas próprias histórias, divindades e características distintas, e essa síntese de influências gregas e romanas contribuiu para a rica tapeçaria mitológica da Roma Antiga.</p>
         <h3>Após ter estudado a mitologia romana, gostaria de iniciar o quiz?</h3>
         <div class="botao">
-          <a href="../quiz/romana.html"
+          <a href="../quiz/romana.php"
             ><input type="button" value="COMEÇAR" id="btnComecar"
           /></a>
         </div>
